# advent_of_code_2022

./: pyproject.toml
day01/: README.md  day01_01.py  day01_02.py  test_day01.py
day02/: day02_01.py  day02_02.py  test_day02.py
day03/: README.md  day03_01.py  day03_02.py  test_day03.py
day04/: README.md  day04_01.py  day04_02.py  test_day04.py
day05/: README.md  day05_01.py  day05_02.py  test_day05.py
day06/: day06_01.py  day06_02.py  test_day06.py
