[tool.poetry]
name = "advent_of_code_2020"
version = "0.1.0"
description = ""
authors = ["Ana Ferro Cantanhede <anacantanhede@fake.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
